--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -17,44 +17,42 @@
   <title>To-do List | CJRM</title>
 </head>
 
-<body class="bg-dark">
-  <div class="container">
+<body>
 
-    <header class="text-center text-light my-4">
-      <h1 class="mb-4">To-do List</h1>
+  <div class="container-lead">
+
+    <div>
+      <h1>To-do List</h1>
       <form class="form-search">
-        <input class="form-control m-auto"
+        <input class="input-search-todo"
                type="text"
                name="search"
                placeholder="Buscar to-do" />
       </form>
-    </header>
+    </div>
 
-    <ul class="todos-container list-group mx-auto text-light">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>Assistir Breaking Bad</span>
-        <i class="far fa-trash-alt delete"></i>
-      </li>
+    <div class="todo-list">
+      <form class="form-add-todo">
+        <input class="add-todo"
+               type="text"
+               name="add"
+               placeholder="Adicionar to-do"
+               autofocus />
+        <button class="myButton">Criar To-do</button>
+      </form>
 
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>Planejar aulas</span>
-        <i class="far fa-trash-alt delete"></i>
-      </li>
+      <ul class="todos-container">
+        <!-- <li class="list-group-item">
+          <i class="far fa-trash-alt delete"></i>
+        </li> -->
+      </ul>
+    </div>
 
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>Fazer exercícios físicos</span>
-        <i class="far fa-trash-alt delete"></i>
-      </li>
-    </ul>
-
-    <form class="form-add-todo text-center my-4">
-      <label class="text-light">Adicionar to-do</label>
-      <input class="form-control m-auto"
-             type="text"
-             name="add"
-             autofocus />
-    </form>
   </div>
+
+
+
+
 
   <script src="./app.js"></script>
 </body>
